# postermaker

./: CHANGELOG.md  LICENSE  README.md  index.md  stack.yaml
examples/: another_images.csv  another_texts.csv  examples.sh  images.csv  texts.csv
postermaker/: .gitignore  postermaker.cabal
postermaker/app/: Main.hs
postermaker/src/: Magick.hs  Options.hs  Parameters.hs  Types.hs
