name:           postermaker
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/viviag/postermaker#readme>
homepage:       https://github.com/viviag/postermaker#readme
bug-reports:    https://github.com/viviag/postermaker/issues
author:         Vit Guzeev
maintainer:     viviag@yandex.ru
copyright:      2018 Vitalii Guzeev
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/viviag/postermaker

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , turtle
    , cassava
    , text
    , vector
    , system-filepath
  exposed-modules:
      Options
    , Parameters
    , Magick
    , Types
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
    RecordWildCards

executable postermaker
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , vector
    , postermaker
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
    RecordWildCards
